force-app/main/default/objects/Product_Brand__c/Product_Brand__c.object-meta.xml
<CustomObject>
    <label>Product Brand</label>
    <nameField>
        <displayFormat>PB-{00000}</displayFormat>
        <label>Product Brand</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>