force-app/main/default/objects/Product_Brand__c/fields/Branded__c.field-meta.xml
<CustomField>
    <fullName>Branded__c</fullName>
    <label>Branded</label>
    <length>255</length>
    <type>Text</type>
</CustomField>