force-app/main/default/objects/Product_Brand__c/fields/Product_Brand_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Brand_Id__c</fullName>
    <externalId>true</externalId>
    <label>Product Brand Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>