force-app/main/default/objects/Product_Brand__c/fields/Protein__c.field-meta.xml
<CustomField>
    <fullName>Protein__c</fullName>
    <label>Protein</label>
    <length>255</length>
    <type>Text</type>
</CustomField>