force-app/main/default/objects/Product_Brand__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>